src/FIRe/Antlr/FIRe/Antlr/CFGParser.java
// Generated from C:/Users/TobiasW/IdeaProjects/FIReCompiler/src/FIRe/Antlr\CFG.g4 by ANTLR 4.7
package FIRe.Antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CFGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RobotProperty=1, RobotTypeVal=2, ColorVal=3, Type=4, RobotProperties=5, 
		RobotName=6, RobotType=7, When=8, EType=9, SingleLineComment=10, MultiLineComment=11, 
		WhiteSpace=12, Val=13, AdditiveOp=14, MultiOp=15, Plus=16, Minus=17, Times=18, 
		Divide=19, Modulo=20, BoolVal=21, RelativeOp=22, BoolOp=23, TRUE=24, FALSE=25, 
		Hat=26, Scopel=27, Scoper=28, Comma=29, Colon=30, SemiColon=31, Dot=32, 
		Squarel=33, Squarer=34, Parenl=35, Parenr=36, For=37, Upto=38, Downto=39, 
		While=40, If=41, Elseif=42, Else=43, Strategy=44, Routine=45, Void=46, 
		Assign=47, Return=48, Not=49, Condition=50, Name=51;
	public static final int
		RULE_prog = 0, RULE_strategydcl = 1, RULE_funcDcl = 2, RULE_funcType = 3, 
		RULE_funcBody = 4, RULE_fParamList = 5, RULE_robotDcl = 6, RULE_robotDclBody = 7, 
		RULE_dcl = 8, RULE_stmt = 9, RULE_routine = 10, RULE_when = 11, RULE_expr = 12, 
		RULE_assignStmt = 13, RULE_funcCall = 14, RULE_conditionDcl = 15, RULE_aParamList = 16, 
		RULE_ctrlStruct = 17, RULE_aif = 18, RULE_aelseif = 19, RULE_aelse = 20, 
		RULE_eParam = 21, RULE_id = 22;
	public static final String[] ruleNames = {
		"prog", "strategydcl", "funcDcl", "funcType", "funcBody", "fParamList", 
		"robotDcl", "robotDclBody", "dcl", "stmt", "routine", "when", "expr", 
		"assignStmt", "funcCall", "conditionDcl", "aParamList", "ctrlStruct", 
		"aif", "aelseif", "aelse", "eParam", "id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'RobotProperties'", "'RobotName'", "'RobotType'", 
		"'when'", null, null, null, null, null, null, null, "'+'", "'-'", "'*'", 
		"'/'", "'%'", null, null, null, "'true'", "'false'", "'^'", "'{'", "'}'", 
		"','", "':'", "';'", "'.'", "'['", "']'", "'('", "')'", "'for'", "'upto'", 
		"'downto'", "'while'", "'if'", "'else if'", "'else'", "'strategy'", "'routine'", 
		"'void'", "'='", "'return'", "'!'", "'condition'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "RobotProperty", "RobotTypeVal", "ColorVal", "Type", "RobotProperties", 
		"RobotName", "RobotType", "When", "EType", "SingleLineComment", "MultiLineComment", 
		"WhiteSpace", "Val", "AdditiveOp", "MultiOp", "Plus", "Minus", "Times", 
		"Divide", "Modulo", "BoolVal", "RelativeOp", "BoolOp", "TRUE", "FALSE", 
		"Hat", "Scopel", "Scoper", "Comma", "Colon", "SemiColon", "Dot", "Squarel", 
		"Squarer", "Parenl", "Parenr", "For", "Upto", "Downto", "While", "If", 
		"Elseif", "Else", "Strategy", "Routine", "Void", "Assign", "Return", "Not", 
		"Condition", "Name"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CFG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CFGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public RobotDclContext robotDcl() {
			return getRuleContext(RobotDclContext.class,0);
		}
		public List<DclContext> dcl() {
			return getRuleContexts(DclContext.class);
		}
		public DclContext dcl(int i) {
			return getRuleContext(DclContext.class,i);
		}
		public List<FuncDclContext> funcDcl() {
			return getRuleContexts(FuncDclContext.class);
		}
		public FuncDclContext funcDcl(int i) {
			return getRuleContext(FuncDclContext.class,i);
		}
		public List<StrategydclContext> strategydcl() {
			return getRuleContexts(StrategydclContext.class);
		}
		public StrategydclContext strategydcl(int i) {
			return getRuleContext(StrategydclContext.class,i);
		}
		public List<ConditionDclContext> conditionDcl() {
			return getRuleContexts(ConditionDclContext.class);
		}
		public ConditionDclContext conditionDcl(int i) {
			return getRuleContext(ConditionDclContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			robotDcl();
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type) | (1L << Strategy) | (1L << Void) | (1L << Condition))) != 0)) {
				{
				setState(51);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(47);
					dcl();
					}
					break;
				case 2:
					{
					setState(48);
					funcDcl();
					}
					break;
				case 3:
					{
					setState(49);
					strategydcl();
					}
					break;
				case 4:
					{
					setState(50);
					conditionDcl();
					}
					break;
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrategydclContext extends ParserRuleContext {
		public TerminalNode Strategy() { return getToken(CFGParser.Strategy, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Parenl() { return getToken(CFGParser.Parenl, 0); }
		public TerminalNode Parenr() { return getToken(CFGParser.Parenr, 0); }
		public TerminalNode Scopel() { return getToken(CFGParser.Scopel, 0); }
		public TerminalNode Scoper() { return getToken(CFGParser.Scoper, 0); }
		public FParamListContext fParamList() {
			return getRuleContext(FParamListContext.class,0);
		}
		public List<DclContext> dcl() {
			return getRuleContexts(DclContext.class);
		}
		public DclContext dcl(int i) {
			return getRuleContext(DclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<RoutineContext> routine() {
			return getRuleContexts(RoutineContext.class);
		}
		public RoutineContext routine(int i) {
			return getRuleContext(RoutineContext.class,i);
		}
		public List<WhenContext> when() {
			return getRuleContexts(WhenContext.class);
		}
		public WhenContext when(int i) {
			return getRuleContext(WhenContext.class,i);
		}
		public StrategydclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategydcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterStrategydcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitStrategydcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitStrategydcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrategydclContext strategydcl() throws RecognitionException {
		StrategydclContext _localctx = new StrategydclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_strategydcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(Strategy);
			setState(57);
			id();
			setState(58);
			match(Parenl);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Type) {
				{
				setState(59);
				fParamList();
				}
			}

			setState(62);
			match(Parenr);
			setState(63);
			match(Scopel);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type) | (1L << When) | (1L << For) | (1L << While) | (1L << If) | (1L << Routine) | (1L << Return) | (1L << Name))) != 0)) {
				{
				setState(68);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(64);
					dcl();
					}
					break;
				case 2:
					{
					setState(65);
					stmt();
					}
					break;
				case 3:
					{
					setState(66);
					routine();
					}
					break;
				case 4:
					{
					setState(67);
					when();
					}
					break;
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(Scoper);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDclContext extends ParserRuleContext {
		public FuncTypeContext funcType() {
			return getRuleContext(FuncTypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Parenl() { return getToken(CFGParser.Parenl, 0); }
		public TerminalNode Parenr() { return getToken(CFGParser.Parenr, 0); }
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public FParamListContext fParamList() {
			return getRuleContext(FParamListContext.class,0);
		}
		public FuncDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFuncDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFuncDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFuncDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDclContext funcDcl() throws RecognitionException {
		FuncDclContext _localctx = new FuncDclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			funcType();
			setState(76);
			id();
			setState(77);
			match(Parenl);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Type) {
				{
				setState(78);
				fParamList();
				}
			}

			setState(81);
			match(Parenr);
			setState(82);
			funcBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncTypeContext extends ParserRuleContext {
		public TerminalNode Void() { return getToken(CFGParser.Void, 0); }
		public TerminalNode Type() { return getToken(CFGParser.Type, 0); }
		public FuncTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFuncType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFuncType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFuncType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncTypeContext funcType() throws RecognitionException {
		FuncTypeContext _localctx = new FuncTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !(_la==Type || _la==Void) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncBodyContext extends ParserRuleContext {
		public TerminalNode Scopel() { return getToken(CFGParser.Scopel, 0); }
		public TerminalNode Scoper() { return getToken(CFGParser.Scoper, 0); }
		public List<DclContext> dcl() {
			return getRuleContexts(DclContext.class);
		}
		public DclContext dcl(int i) {
			return getRuleContext(DclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public FuncBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFuncBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFuncBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFuncBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncBodyContext funcBody() throws RecognitionException {
		FuncBodyContext _localctx = new FuncBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(Scopel);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type) | (1L << For) | (1L << While) | (1L << If) | (1L << Routine) | (1L << Return) | (1L << Name))) != 0)) {
				{
				setState(89);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Type:
					{
					setState(87);
					dcl();
					}
					break;
				case For:
				case While:
				case If:
				case Routine:
				case Return:
				case Name:
					{
					setState(88);
					stmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(Scoper);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FParamListContext extends ParserRuleContext {
		public TerminalNode Type() { return getToken(CFGParser.Type, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Comma() { return getToken(CFGParser.Comma, 0); }
		public FParamListContext fParamList() {
			return getRuleContext(FParamListContext.class,0);
		}
		public FParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fParamList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FParamListContext fParamList() throws RecognitionException {
		FParamListContext _localctx = new FParamListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fParamList);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(Type);
				setState(97);
				id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(Type);
				setState(99);
				id();
				setState(100);
				match(Comma);
				setState(101);
				fParamList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotDclContext extends ParserRuleContext {
		public TerminalNode RobotProperties() { return getToken(CFGParser.RobotProperties, 0); }
		public TerminalNode Scopel() { return getToken(CFGParser.Scopel, 0); }
		public RobotDclBodyContext robotDclBody() {
			return getRuleContext(RobotDclBodyContext.class,0);
		}
		public TerminalNode Scoper() { return getToken(CFGParser.Scoper, 0); }
		public RobotDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterRobotDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitRobotDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitRobotDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RobotDclContext robotDcl() throws RecognitionException {
		RobotDclContext _localctx = new RobotDclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_robotDcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(RobotProperties);
			setState(106);
			match(Scopel);
			setState(107);
			robotDclBody();
			setState(108);
			match(Scoper);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotDclBodyContext extends ParserRuleContext {
		public TerminalNode RobotName() { return getToken(CFGParser.RobotName, 0); }
		public List<TerminalNode> Colon() { return getTokens(CFGParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(CFGParser.Colon, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<TerminalNode> SemiColon() { return getTokens(CFGParser.SemiColon); }
		public TerminalNode SemiColon(int i) {
			return getToken(CFGParser.SemiColon, i);
		}
		public TerminalNode RobotType() { return getToken(CFGParser.RobotType, 0); }
		public TerminalNode RobotTypeVal() { return getToken(CFGParser.RobotTypeVal, 0); }
		public List<TerminalNode> RobotProperty() { return getTokens(CFGParser.RobotProperty); }
		public TerminalNode RobotProperty(int i) {
			return getToken(CFGParser.RobotProperty, i);
		}
		public List<TerminalNode> ColorVal() { return getTokens(CFGParser.ColorVal); }
		public TerminalNode ColorVal(int i) {
			return getToken(CFGParser.ColorVal, i);
		}
		public RobotDclBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotDclBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterRobotDclBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitRobotDclBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitRobotDclBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RobotDclBodyContext robotDclBody() throws RecognitionException {
		RobotDclBodyContext _localctx = new RobotDclBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_robotDclBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(RobotName);
			setState(111);
			match(Colon);
			setState(112);
			id();
			setState(113);
			match(SemiColon);
			setState(114);
			match(RobotType);
			setState(115);
			match(Colon);
			setState(116);
			match(RobotTypeVal);
			setState(117);
			match(SemiColon);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RobotProperty) {
				{
				{
				setState(118);
				match(RobotProperty);
				setState(119);
				match(Colon);
				setState(120);
				match(ColorVal);
				setState(121);
				match(SemiColon);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public TerminalNode Type() { return getToken(CFGParser.Type, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode Assign() { return getToken(CFGParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(CFGParser.SemiColon, 0); }
		public List<TerminalNode> Comma() { return getTokens(CFGParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CFGParser.Comma, i);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dcl);
		int _la;
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(Type);
				setState(128);
				id();
				setState(129);
				match(Assign);
				setState(130);
				expr(0);
				setState(131);
				match(SemiColon);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(Type);
				setState(134);
				id();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(135);
					match(Comma);
					setState(136);
					id();
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(142);
				match(SemiColon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(CFGParser.SemiColon, 0); }
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public CtrlStructContext ctrlStruct() {
			return getRuleContext(CtrlStructContext.class,0);
		}
		public TerminalNode Return() { return getToken(CFGParser.Return, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}
